--- a/src/scss/components/_itemcard.scss
+++ b/src/scss/components/_itemcard.scss
@@ -78,7 +78,7 @@ main {
 
 .card-footer {
 	margin-top: 8px;
-	text-align: center;
+	text-align: left;
 	font-size: 12px;
 	color: #555555;
 	span {
